# advent-of-code-2024

./: 01.ml  01.nix  README.md  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day_template.ml  dune  grid.ml  grid2d.ml  lib.ml  next-day  runner.ml  shell.nix  vec2i.ml
