;; Executables can not have tests.

(library
  (name lib)
  (modules lib)
  (libraries str)
  (inline_tests)
  (preprocess (pps ppx_expect)))

(library
  (name days)
  (modules
    day01
    day02
    day03
    day04)
  (libraries str lib)
  (inline_tests)
  (preprocess (pps ppx_expect ppx_deriving.show)))

(executable
  (name runner)
  (modules runner)
  (libraries days))
