;; Executables can not have tests.

(library
  (name lib)
  (modules lib)
  (libraries str)
  (inline_tests)
  (preprocess (pps ppx_expect)))

(library
  (name grid2d)
  (modules grid2d)
  (libraries lib))

(library
  (name days)
  (modules
    day01
    day02
    day03
    day04
    day05
    day06)
  (libraries str lib grid2d)
  (inline_tests)
  (preprocess (pps ppx_expect ppx_deriving.show)))

(executable
  (name runner)
  (modules runner)
  (libraries days))
