;; Executables can not have tests.

(library
  (name lib)
  (modules lib)
  (libraries str)
  (inline_tests)
  (preprocess (pps ppx_expect)))

(library
  (name grid)
  (modules grid)
  (libraries lib))

(library
  (name vec2i)
  (modules vec2i))

(library
  (name days)
  (modules
    day01
    day02
    day03
    day04
    day05
    day06
    day07)
  (libraries str lib grid vec2i)
  (inline_tests)
  (preprocess (pps ppx_expect ppx_deriving.show)))

(executable
  (name runner)
  (modules runner)
  (libraries days))
